--- a/assets/css/oneui.css
+++ b/assets/css/oneui.css
@@ -4702,10 +4702,11 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   color: #777;
 }
 .pagination {
-  display: inline-block;
+  /*display: inline-block;*/
   padding-left: 0;
-  margin: 20px 0;
-  border-radius: 4px;
+  /*margin: 20px 0;*/
+  /*border-radius: 4px;*/
+  text-align: right;
 }
 .pagination > li {
   display: inline;
@@ -7306,7 +7307,7 @@ a.bg-gray-lighter:hover {
   background-color: #e0e0e0;
 }
 .btn {
-  font-weight: 600;
+  /*font-weight: 600;*/
   border-radius: 2px;
   -webkit-transition: all 0.15s ease-out;
   transition: all 0.15s ease-out;
@@ -8125,13 +8126,13 @@ a.list-group-item:focus {
   color: #5c90d2;
 }
 .breadcrumb {
-  padding: 0;
-  margin-bottom: 0;
-  text-transform: uppercase;
+ /* padding: 0;*/
+  margin-bottom: 30px;
+  /*text-transform: uppercase;
   font-size: 12px;
   font-weight: 600;
   color: #999999;
-  background-color: transparent;
+  background-color: transparent;*/
 }
 .breadcrumb > li + li:before {
   display: inline-block;
@@ -11334,7 +11335,8 @@ a.list-group-item:focus {
   overflow-x: hidden;
 }
 #main-container {
-  background-color: #f5f5f5;
+  /*background-color: #f5f5f5;*/
+  background-color: #fff;
 }
 .content {
   margin: 0 auto;
