--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,3 +23,22 @@
       color: #333; }
     #header-navbar .navbar-nav li.active a {
       background: #f5f5f5; }
+
+.breadcrumb {
+  border-bottom: 1px solid #f1f1f1;
+  border-radius: 0;
+  background: #fff;
+  padding: 10px 0; }
+
+.search-bar {
+  border: 1px solid #f1f1f1; }
+  .search-bar .form-group {
+    padding-right: 20px; }
+    .search-bar .form-group label {
+      margin-right: 5px; }
+    .search-bar .form-group .btn {
+      margin-right: 5px; }
+    .search-bar .form-group:last-child {
+      padding-right: 0; }
+      .search-bar .form-group:last-child .btn {
+        margin-left: 0; }
