--- a/assets/scss/provider.scss
+++ b/assets/scss/provider.scss
@@ -1,20 +1,19 @@
 .breadcrumb {
-	font-size: 16px !important;
+	// font-size: 16px !important;
 }
 .content {
-	padding: 10px 30px;
-	margin: 15px 0;
-		
+	// padding: 10px 30px;
+	// margin: 15px 0;		
 }
 .content-check {
-	background: #e5e5e5;
+	// background: #e5e5e5;
 	padding: 10px 10px;
 	margin: 0 30px;
 }
 .bg-gray-lighter {
-	border-top: 1px solid #fff;	
-	border-bottom: 2px solid #fff;
-	background-color: #fefefe;
+	// border-top: 1px solid #fff;	
+	// border-bottom: 2px solid #fff;
+	// background-color: #fefefe;
 }
 a:hover {
 	cursor: pointer;
@@ -23,40 +22,40 @@ a:hover {
 .provider {
 	.form-check {
 
-		& > div:nth-child(1) {
-			width: 18%;
-			> label {
-				margin-right: 2%; 
-			}
-		}
-		& > div:nth-child(2) {
-			width: 18%;
-			> label {
-				margin-right: 2%; 
-			}
-		}
-		& > div:nth-child(3) {
-			width: 18%;
-			> label {
-				margin-right: 2%; 
-			}
-		}
-		& > div:nth-child(4) {
-			width: 18%;
-			> label {
-				margin-right: 2%; 
-			}
-		}
-		& > div:nth-child(5) {
-			width: 16%;
-			> label {
-				margin-right: 2%; 
-			}
-		}
-		& > div:nth-child(6) {
-			width: 10%;
-			text-align: right;
-		}
+		// & > div:nth-child(1) {
+		// 	width: 18%;
+		// 	> label {
+		// 		margin-right: 2%; 
+		// 	}
+		// }
+		// & > div:nth-child(2) {
+		// 	width: 18%;
+		// 	> label {
+		// 		margin-right: 2%; 
+		// 	}
+		// }
+		// & > div:nth-child(3) {
+		// 	width: 18%;
+		// 	> label {
+		// 		margin-right: 2%; 
+		// 	}
+		// }
+		// & > div:nth-child(4) {
+		// 	width: 18%;
+		// 	> label {
+		// 		margin-right: 2%; 
+		// 	}
+		// }
+		// & > div:nth-child(5) {
+		// 	width: 16%;
+		// 	> label {
+		// 		margin-right: 2%; 
+		// 	}
+		// }
+		// & > div:nth-child(6) {
+		// 	width: 10%;
+		// 	text-align: right;
+		// }
 	}
 	
 }
