--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,4 +1,6 @@
 
+@import "./_var";
+
 // login page
 
 #page-container {
@@ -48,4 +50,43 @@
 			}
 		}
 	}	
+}
+
+// bread crumb
+
+.breadcrumb {
+	// border-top:1px solid $borderColor;
+	border-bottom:1px solid $borderColor;
+	border-radius: 0;
+	background: $backgroundColor;
+	// margin: 0 -15px 30px;
+	padding: 10px 0;
+}
+
+// search bar
+
+.search-bar {
+	border:1px solid $borderColor;
+	.form-group {
+
+		padding-right: 20px;
+
+		label {
+
+			margin-right: 5px;
+
+		}
+		.btn {
+	
+			margin-right:5px;
+
+		}
+		&:last-child {
+			padding-right: 0;
+			.btn {
+				margin-left: 0;
+			}
+		}
+
+	}
 }
