--- a/templates/provider.html
+++ b/templates/provider.html
@@ -1,8 +1,8 @@
 <div class="provider">
     <!-- Page Header -->
-    <div class="content bg-gray-lighter">
-        <div class="row">
-            <div class="col-sm-5 hidden-xs">
+    <div class="content">
+        <div class="">
+            <div class="hidden-xs">
                 <ol class="breadcrumb">
                     <li>供用商管理</li>
                     <li><a class="link-effect" href="">供应商详情</a></li>
@@ -13,7 +13,7 @@
     <!-- END Page Header -->
 
     <!-- Page Information Service -->
-    <div class="content content-check">
+    <div class="content content-check search-bar bg-gray-lighter">
         <form class="form-inline form-check" action="base_forms_elements.html" method="post" onsubmit="return false;">
             <div class="form-group">
                 <label  for="example-if-email">供应商名称</label>
@@ -36,15 +36,44 @@
                     </select>
             </div>
             <div class="form-group">
-                <button class="btn btn-info" type="submit">查询</button>
-                <button class="btn btn-primary" type="submit">重置</button>
+                <button class="btn btn-primary" type="submit">查询</button>
+                <button class="btn btn-default" type="submit">重置</button>
             </div>
-            <div class="form-group">
-                <button class="btn btn-warning">添加供应商</button>
+            <div class="form-group pull-right">
+                <button class="btn btn-info">添加供应商</button>
             </div>
         </form>
     </div>
     <!-- END Page Information Service -->
+    
+    <div class="content pagination">
+        <form class="form-inline">
+            <div>
+                <span>
+                    当前第1页
+                </span>
+                <select class="form-control" id="example-select" name="example-select" size="1">
+                    <option value="0">第1页</option>
+                    <option value="1">第2页</option>
+                    <option value="2">第3页</option>
+                    <option value="3">第4页</option>
+                </select>
+                
+                <button class="btn  btn-square btn-default" type="button">首页</button>
+                <button class="btn  btn-square btn-default" type="button">上一页</button>
+                <button class="btn  btn-square btn-default" type="button">下一页</button>
+                <button class="btn  btn-square btn-default" type="button">尾页</button>
+
+                <select class="form-control" id="example-select" name="example-select" size="1">
+                    <option value="0">每页20条</option>
+                    <option value="1">每页40条</option>
+                    <option value="2">每页60条</option>
+                    <option value="3">每页80条</option>
+                </select>
+
+            </div>            
+        </form>
+    </div>
 
     <!-- Page Content -->
     <div class="content">
@@ -53,7 +82,7 @@
             <!-- <div class="block-header">
                 <h3 class="block-title">Dynamic Table <small>Full</small></h3>
             </div> -->
-            <div class="block-content">
+            <div class="">
                 <!-- DataTables init on table by adding .js-dataTable-full class, functionality initialized in js/pages/base_tables_datatables.js -->
                 <table class="table table-bordered table-striped js-dataTable-full">
                     <thead>
