--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@
 .breadcrumb {
   border-bottom: 1px solid #f1f1f1;
   border-radius: 0;
+  font-size: 16px !important;
   background: #fff;
   padding: 10px 0; }
 
