--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -58,6 +58,7 @@
 	// border-top:1px solid $borderColor;
 	border-bottom:1px solid $borderColor;
 	border-radius: 0;
+	font-size: 16px !important;
 	background: $backgroundColor;
 	// margin: 0 -15px 30px;
 	padding: 10px 0;
@@ -90,3 +91,4 @@
 
 	}
 }
+
